# magicpin-vera-ai-challenge

./: .dockerignore  .gitignore  Dockerfile  Magicpin_Vera_AI_Challenge_Project_Plan_v2.docx  PROJECT_PLAN_v2.md  README.md  bot.py  judge_simulator.py  pyproject.toml  railway.json  run_judge.sh  submission.jsonl
docs/: evaluation-analysis.md
docs/superpowers/plans/: 2026-05-01-vera-phase-1-implementation.md
docs/superpowers/specs/: 2026-05-01-vera-phase-1-design.md  2026-05-02-vera-agentic-redesign-design.md
expanded/: phase3_customer.json  phase3_new_digest.json  phase3_triggers.json
tests/: test_contract.py  test_judge_config.py
tools/: evaluate_ab.py  generate_submission.py  smoke_endpoints.py  validate_submission.py
vera_bot/: composer.py  config.py  fact_extractor.py  llm_client.py  main.py  prompts.py  reply_handler.py  retrieval.py  routes.py  schemas.py  store.py  templates_corpus.json  trigger_handlers.py  validators.py
