[project]
name = "vera-bot"
version = "2.0.0"
description = "Magicpin Vera AI merchant engagement bot — hybrid BM25 + LLM"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "openai>=2.33",
    "rank-bm25>=0.2",
    "google-genai>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
